# ann-search-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
benches/: gpu_exhaustive_kernels.rs  gpu_ivf_kernels.rs
docs/: benchmarks_binary.md  benchmarks_general.md  benchmarks_gpu.md  benchmarks_quantised.md  benchmarks_standard.md  news.md
docs/templates/: benchmarks_binary.md.tmpl  benchmarks_general.md.tmpl  benchmarks_gpu.md.tmpl  benchmarks_quantised.md.tmpl  benchmarks_standard.md.tmpl
examples/: benchmarks_100k_16dim.rs  benchmarks_100k_32dim.rs  benchmarks_10k_8dim.rs  benchmarks_150k_16dim.rs  benchmarks_150k_32dim.rs  benchmarks_2m_32dim.rs  benchmarks_500k_16dim.rs  benchmarks_500k_16dims.rs  benchmarks_500k_32dim.rs  benchmarks_50k_16dim.rs  benchmarks_50k_32dim.rs  diagnosis_annoy.rs  diagnosis_ivf.rs  diagnosis_nndescent.rs  fill_benchmarks.sh  gridsearch_annoy.rs  gridsearch_balltree.rs  gridsearch_bf16.rs  gridsearch_binary.rs  gridsearch_cagra.rs  gridsearch_carga.rs  gridsearch_fanng.rs  gridsearch_gpu.rs  gridsearch_hnsw.rs  gridsearch_ivf.rs  gridsearch_ivf_bf16.rs  gridsearch_ivf_opq.rs  gridsearch_ivf_pq.rs  gridsearch_ivf_sq8.rs  gridsearch_kd_forest.rs  gridsearch_kmknn.rs  gridsearch_lsh.rs  gridsearch_lsh_de.rs  gridsearch_nndescent.rs  gridsearch_opq.rs  gridsearch_pq.rs  gridsearch_rabitq.rs  gridsearch_sq8.rs  gridsearch_vamana.rs  knn_comparison_cagra.rs  (+3 more)
examples/commons/: mod.rs
src/: annoy.rs  ball_tree.rs  dist.rs  exhaustive.rs  fanng.rs  hnsw.rs  ivf.rs  lib.rs  lsh.rs  lsh_de.rs  main.rs  nndescent.rs  prelude.rs  synthetic.rs  utils.rs  vamana.rs
src/binary/: binariser.rs  dist_binary.rs  exhaustive_binary.rs  exhaustive_rabitq.rs  ivf_binary.rs  ivf_rabitq.rs  mod.rs  rabitq.rs  vec_store.rs
src/cpu/: annoy.rs  ball_tree.rs  exhaustive.rs  hnsw.rs  ivf.rs  kd_forest.rs  kmknn.rs  lsh.rs  mod.rs  nndescent.rs  vamana.rs
src/gpu/: cagra_gpu_search.rs  dist_gpu.rs  exhaustive_gpu.rs  forest_gpu.rs  ivf_gpu.rs  mod.rs  nndescent_gpu.rs  tensor.rs  traits_gpu.rs
src/quantised/: exhaustive_bf16.rs  exhaustive_opq.rs  exhaustive_pq.rs  exhaustive_sq8.rs  ivf_bf16.rs  ivf_opq.rs  ivf_pq.rs  ivf_sq8.rs  ivfsq8.rs  k_means.rs  mod.rs  quantisers.rs
src/utils/: dist.rs  graph_utils.rs  heap_structs.rs  ivf_utils.rs  k_means.rs  k_means_utils.rs  mod.rs  parallelism.rs  traits.rs  tree_utils.rs
