[package]
name = "ann-search-rs"
version = "0.2.1"
edition = "2021"
authors = ["Gregor Lueg <gregorlueg@me.com>"]
license = "MIT"
repository = "https://github.com/GregorLueg/ann-search-rs"
description = "Various approximate nearest neighbour searches in Rust with emphasis for single cell applications."

[lib]
name = "ann_search_rs"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

[features]
gpu = ["cubecl"]
quantised = ["half"]
binary = []

[dependencies]
approx = "0.5.1"
clap = { version = "4.5.53", features = ["derive"] }
cubecl = { version = "0.8.1", features = ["wgpu"], optional = true }
faer = "0.23.2"
faer-traits = "0.23.2"
fixedbitset = "0.5.7"
half = { version = "2.7.1", optional = true }
num-traits = "0.2.19"
parking_lot = "0.12.5"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"
thousands = "0.2.0"

[[example]]
name = "gridsearch_gpu"
required-features = ["gpu"]

[[example]]
name = "gridsearch_ivf_sq8"
required-features = ["quantised"]

[[example]]
name = "gridsearch_ivf_opq"
required-features = ["quantised"]

[[example]]
name = "gridsearch_ivf_pq"
required-features = ["quantised"]

[[example]]
name = "gridsearch_binary"
required-features = ["binary"]
