[package]
name = "ann-search-rs"
version = "0.2.4"
edition = "2021"
authors = ["Gregor Lueg <gregorlueg@me.com>"]
license = "MIT"
repository = "https://github.com/GregorLueg/ann-search-rs"
description = "Various vector search algorithms in Rust. Designed specifically for single cell applications."

[lib]
name = "ann_search_rs"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

[features]
binary = ["memmap2", "tempfile", "bytemuck"]
gpu = ["cubecl"]
quantised = ["half"]

[dependencies]
approx = "0.5.1"
bytemuck = { version = "1.24.0", features = ["derive"], optional = true }
clap = { version = "4.5.53", features = ["derive"] }
cubecl = { version = "0.9.0", features = ["wgpu", "cpu"], optional = true }
faer = "0.23.2"
faer-traits = "0.23.2"
fixedbitset = "0.5.7"
half = { version = "2.7.1", optional = true }
memmap2 = { version = "0.9.9", optional = true }
num-traits = "0.2.19"
parking_lot = "0.12.5"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"
tempfile = { version = "3.24.0", optional = true }
thousands = "0.2.0"
wide = "1.1.1"

[[example]]
name = "gridsearch_gpu"
required-features = ["gpu"]

[[example]]
name = "gridsearch_sq8"
required-features = ["quantised"]

[[example]]
name = "gridsearch_bf16"
required-features = ["quantised"]

[[example]]
name = "gridsearch_opq"
required-features = ["quantised"]

[[example]]
name = "gridsearch_pq"
required-features = ["quantised"]

[[example]]
name = "gridsearch_binary"
required-features = ["binary"]

[[example]]
name = "gridsearch_rabitq"
required-features = ["binary"]
