[package]
name = "ann-search-rs"
version = "0.2.8"
edition = "2021"
authors = ["Gregor Lueg <gregorlueg@me.com>"]
license = "MIT"
repository = "https://github.com/GregorLueg/ann-search-rs"
description = "Various vector search algorithms in Rust. Designed specifically for single cell & computational biology applications."

[lib]
name = "ann_search_rs"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

############
# Features #
############

[features]
## Enables binary index support with optional memory-mapped files for on-disk vector storage
binary = ["memmap2", "tempfile", "bytemuck"]
## Enables GPU-accelerated indices via the CubeCL backend
gpu = ["cubecl"]
## Enables GPU integration tests (requires 'wgpu' and a GPU on the machine)
gpu-tests = ["gpu"]
## Enables quantised indices with different quantisations (BF16, SQ8, PQ, OPQ)
quantised = ["half"]
## Enables mimalloc as the global allocator for improved performance
mimalloc = ["dep:mimalloc"]

# Dependecies
[dependencies]
approx = "0.5.1"
bytemuck = { version = "1.24.0", features = ["derive"], optional = true }
clap = { version = "4.5.53", features = ["derive"] }
cubecl = { version = "0.9.0", features = ["wgpu", "cpu"], optional = true }
document-features = "0.2.12"
faer = "0.23.2"
faer-traits = "0.23.2"
fixedbitset = "0.5.7"
half = { version = "2.7.1", optional = true }
memmap2 = { version = "0.9.9", optional = true }
mimalloc = { version = "0.1.48", optional = true }
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"
tempfile = { version = "3.24.0", optional = true }
thousands = "0.2.0"
wide = "1.1.1"

[package.metadata.docs.rs]
all-features = true

################
# Gridsearches #
################

[[example]]
name = "gridsearch_gpu"
required-features = ["gpu"]

[[example]]
name = "gridsearch_cagra"
required-features = ["gpu"]

[[example]]
name = "gridsearch_sq8"
required-features = ["quantised"]

[[example]]
name = "gridsearch_bf16"
required-features = ["quantised"]

[[example]]
name = "gridsearch_opq"
required-features = ["quantised"]

[[example]]
name = "gridsearch_pq"
required-features = ["quantised"]

[[example]]
name = "gridsearch_binary"
required-features = ["binary"]

[[example]]
name = "gridsearch_rabitq"
required-features = ["binary"]

##################
# Other examples #
##################

[[example]]
name = "knn_comparison_cagra"
required-features = ["gpu"]

###########
# Benches #
###########

[[bench]]
name = "gpu_exhaustive_kernels"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_ivf_kernels"
harness = false
required-features = ["gpu"]
